adjusted code from recipes site to new locations

--- a/patshkowski.aj/recipes/index.html
+++ b/patshkowski.aj/recipes/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <title>AJ's Recipe Corner</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="../recipes/styles/style.css">
 
 </head>
 
@@ -11,10 +11,7 @@
 
 	<img class="knives" src="images/utensils.png">
 
-	<div class="title"><img id="titleimg" src="images/RECIPECORNER.png"></div>
-
-
-
+	<div class="title"><img id="titleimg" src="../recipes/images/RECIPECORNER.png"></div>
 
 
 
@@ -22,17 +19,17 @@
 <div class="container">
   <div class="card">
     <div class="cardside card1">
-      <img src="images/tacos.jpg" />
+      <img src="../recipes/images/tacos.jpg">
     </div>
   </div>
   <div class="card">
     <div class="cardside card2">
-      <img src="images/judy.jpg" />
+      <img src="../recipes/images/judy.jpg">
     </div>
   </div>
   <div class="card">
     <div class="cardside card3">
-      <img src="images/judycolor.jpg" />
+      <img src="../recipes/images/judycolor.jpg">
     </div>
   </div>
 </div>
