added all correct images

--- a/patshkowski.aj/recipes/index.html
+++ b/patshkowski.aj/recipes/index.html
@@ -4,12 +4,15 @@
 
     <title>AJ's Recipe Corner</title>
     <link rel="stylesheet" type="text/css" href="../recipes/styles/style.css">
+    <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="../recipes/scripts/script.js"></script>
+
 
 </head>
 
 <body>
 
-	<img class="knives" src="images/utensils.png">
+	<img class="knives" src="images/knives.png">
 
 	<div class="title"><img id="titleimg" src="../recipes/images/RECIPECORNER.png"></div>
 
@@ -19,20 +22,25 @@
 <div class="container">
   <div class="card">
     <div class="cardside card1">
-      <img src="../recipes/images/tacos.jpg">
+      <img src="images/tacos.jpg">
     </div>
   </div>
   <div class="card">
     <div class="cardside card2">
-      <img src="../recipes/images/judy.jpg">
+      <img src="images/cauliflower.JPG">
     </div>
   </div>
   <div class="card">
     <div class="cardside card3">
-      <img src="../recipes/images/judycolor.jpg">
+      <img src="images/minestrone.jpg">
     </div>
   </div>
 </div>
+
+
+
+
+
 
 
 
