--- a/patshkowski.aj/recipes/index.html
+++ b/patshkowski.aj/recipes/index.html
@@ -5,26 +5,27 @@
     <title>AJ's Recipe Corner</title>
     <link rel="stylesheet" type="text/css" href="../recipes/styles/style.css">
     <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="../recipes/scripts/script.js"></script>
+    
 
 
 </head>
 
 <body>
-
+ 
 	<img class="knives" src="images/knives.png">
 
 	<div class="title"><img id="titleimg" src="../recipes/images/RECIPECORNER.png"></div>
 
 
 
-
+ 
 <div class="container">
   <div class="card">
     <div class="cardside card1">
       <img src="images/tacos.jpg">
     </div>
   </div>
+
   <div class="card">
     <div class="cardside card2">
       <img src="images/cauliflower.JPG">
@@ -39,7 +40,119 @@
 
 
 
+<div class="recipe1">
 
+  <h2>Chipotle Tofu Tacos</h2>
+    <h3>with Radish Escabeche & Cilantro Crema</h3>
+      <h4>Ingredients:</h4>
+        <p>
+          <ul>
+            <li>2 garlic cloves</li>
+            <li>14 oz organic extra firm tofu</li>
+            <li>1 head of baby romaine lettuce</li>
+            <li>4 radishes</li>
+            <li>1 lime</li>
+            <li>1/4 oz fresh cilantro</li>
+            <li>1 tsp agave</li>
+            <li>3 tbsp Vegenaise</li>
+            <li>1 chipotle pepper in adobo (spicy!)</li>
+            <li>2 tbsp almond butter</li>
+            <li>2 tsp tamari</li>
+            <li>6 corn tortillas</li>
+          </ul>
+        </p>
+      <h4>Directions:</h4>
+        <p>
+          <ol>
+            <li>Preheat oven to 350 degrees F for the tortillas. Peel and mince the garlic. Dice tofu into bite-size cubes. Thinly slice the baby romaine lettuce. Thinly slice the radishes. Halve and juice the lime. Finely chop the cilantro leaves.</li>
+            <li>Add lime juice, agave, and 1/8 tsp salt to a medium bowl, and stir to dissolve the salt. Add sliced radishes to the bowl, toss, and set the radish escabeche aside to marinate. Add just 1 tsp minced garlic, chopped cilantro, and Vegenaise to a small bowl. Add a pinch of salt and stir the cilantro crema.</li>
+            <li>Mince the chipotle pepper and reserve the remaining adobo sauce. Add remaining minced garlic, minced chipotle pepper, adobo sauce, almond butter, tamari, and 2 tbsp warm water to a medium bowl and whisk. Add 1/4 tsp salt and stir the chipotle sauce until smooth. Wrap corn tortillas in foil and place in the oven to warm, 3 to 4 minutes.</li>
+            <li>Heat 1 tbsp vegetable oil in a large nonstick skillet over medium-high heat. Add cubed tofu and cook until crispy in places, 3 to 5 minutes. Add chipotle sauce and cook another 2 to 3 minutes.</li>
+            <li>Spread cilantro crema on the warmed corn tortillas. Top with chipotle tofu, radish escabeche, and sliced baby romaine lettuce. Savor every delicious bite!</li>
+          </ol>
+          Recipe courtesy of Purple Carrot.
+        </p>
+
+
+</div>
+
+
+<div class="recipe2">
+  <h2>Tahini Cauliflower Steaks</h2>
+    <h3>with Red Lentil Skordalia & Charred Green Beans</h3>
+      <h4>Ingredients:</h4>
+        <p>
+          <ul>
+            <li>1 russet potato</li>
+            <li>1/2 oz fresh dill</li>
+            <li>1 head of cauliflower</li>
+            <li>2 garlic cloves</li>
+            <li>1 lemon</li>
+            <li>1/2 cup red lentils</li>
+            <li>3 tbsp tahini</li>
+            <li>1 tsp smoked paprika</li>
+            <li>2 tbsp white vinegar</li>
+            <li>6 oz green beans</li>
+            <li>1/4 cup pumpkin seeds</li>
+          </ul>
+        </p>
+      <h4>Directions:</h4>
+        <p>
+          <ol>
+            <li>Preheat oven to 425 degrees F. Peel russet potato and dice into 1 inch pieces. Pick and roughly chop dill fronds. Remove cauliflower leaves and cut 1 inch off the stem. Carefully cut cauliflower into 4 steaks, each about 1 inch thick. Peel and mince the garlic. Halve the lemon, juice one half, and cut the other half into wedges.</li>
+            <li>Add diced russet potato, red lentils, 1 1/4 cups water, and a pinch of salt to a small saucepan. Bring to a boil, cover, reduce heat to low, and simmer until lentils are soft and potatoes are fork-tender, 14 to 16 minutes. Mash the red lentil skordalia with a fork.</li>
+            <li>Line a baking sheet with foil or parchment paper. In a medium bowl, combine just half the minced garlic, just 1 tbsp lemon juice, tahini, smoked paprika, 2 tbsp olive oil, and 3/4 tsp salt. Whisk until combined. Coat cauliflower steaks with tahini mixture and place on the lined baking sheet. Roast until tender and well browned, 15 to 20 minutes.</li>
+            <li>Add just half the chopped dill, remaining minced garlic, white vinegar, and 1 tbsp olive oil to the saucepan with the red lentil skordalia. Mash with a fork until mostly smooth. Taste, and add salt and pepper as necessary.</li>
+            <li>Heat 1 tbsp olive oil in a large nonstick skillet over medium heat. Add green beans and cook until they are charred in places, 5 to 8 minutes. Taste, add salt and pepper as necessary, and remove from heat.</li>
+            <li>Divide red lentil skordalia between two large plates. Add tahini cauliflower steaks, and sprinkle with pumpkin seeds and remaining chopped dill. Serve with charred green beans and lemon wedges. Dig in!</li>
+          </ol>
+          Recipe courtesy of Purple Carrot.
+        </p>
+
+</div>
+
+
+
+<div class="recipe3">
+  <h2>Instant Pot Minestrone Soup</h2>
+    <h3>with Quinoa (Gluten-Free)</h3>
+      <h4>Ingredients:</h4>
+        <p>
+          <ul>
+            <li>2 tbsp extra virgin olive oil</li>
+            <li>1 can Northern Beans or your favorite beans, rinsed and drained</li>
+            <li>1 cup chopped celery</li>
+            <li>1 cup chopped carrot</li>
+            <li>32 oz. low-sodium vegetable broth</li>
+            <li>2-3 cloves garlic chopped</li>
+            <li>1 tsp salt</li>
+            <li>1 tsp ground black pepper</li>
+            <li>1 tsp smoked paprika</li>
+            <li>2 tsp Italian seasoning</li>
+            <li>1-2 tbsp chili garlic paste</li>
+            <li>3 tbsp tomato paste</li>
+            <li>1/4 cup quinoa</li>
+            Add after opening lid:
+            <li>2 cups baby spinach chopped</li>
+            <li>2 tbsp grated parmesan cheese</li>
+            <li>2 links pre-cooked chicken sausage chopped</li>
+          </ul>
+        </p>
+      <h4>Directions:</h4>
+        <p>
+          <ol>
+            <li>Prep: Chop vegetables. Finely chop garlic cloves. Rinse and drain canned beans.</li>
+            <li>In the inner pot, add olive oil, garlic, chopped vegetables, beans, vegetable stock, spices, chili-garlic sauce, tomato paste, quinoa, and stir well.</li>
+            <li>Close lid. Set vent to Sealing Mode. Cook on Manual (high) for 3-4 minutes, depending on how you like your vegetables.</li>
+            <li>Wait for 5 minutes and release the pressure manually, and open the lid. Stir in chopped spinach and sausage. The heat from the soup will be enough to wilt the spinach and bring everything together. Garnish with freshly grated parmesan cheese and enjoy!</li>
+          </ol>
+          Recipe courtesy of <a href="https://spicecravings.com/minestrone-soup-one-pot-meal#wprm-recipe-container-4740">Spice Cravings</a>
+        </p>
+
+</div>
+
+
+<script type="text/javascript" src="../recipes/scripts/script.js"></script>
 
 
 
