added Home button, removed unecessary images and code

--- a/patshkowski.aj/recipes/index.html
+++ b/patshkowski.aj/recipes/index.html
@@ -12,6 +12,9 @@
 
 <body>
  
+<a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/index.html" class="button">Home</a>
+
+
 	<img class="knives" src="images/knives.png">
 
 	<div class="title"><img id="titleimg" src="../recipes/images/RECIPECORNER.png"></div>
@@ -33,7 +36,7 @@
   </div>
   <div class="card">
     <div class="cardside card3">
-      <img src="images/minestrone.jpg">
+      <img src="images/minestrone.JPG">
     </div>
   </div>
 </div>
