--- a/patshkowski.aj/index.html
+++ b/patshkowski.aj/index.html
@@ -1,1 +1,84 @@
-Hello there!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Your New Favorite Website</title>
+
+	<link rel="stylesheet" href="lib/css/styleguide.css">
+	<link rel="stylesheet" href="css/storetheme.css">
+</head>
+<body>
+	
+
+	<!-- To COMMENT : cmd + / -->
+
+	<!-- header>h1+p -->
+	<header>
+		<div class="container">
+			<h1>Awesome website</h1>
+	</header>
+
+
+	<!-- nav.nav>ul>li*4>a[href=#article$]>{Link $} -->
+
+	<nav class="nav container">
+		<ul>
+			<li><a href="#article1">Link 1</a></li>
+			<li><a href="#article2">Link 2</a></li>
+			<li><a href="#article3">Link 3</a></li>
+			<li><a href="#article4">Link 4</a></li>
+		</ul>
+	</nav>
+
+
+	<!-- .container>article#article$.article*4>h2{Article $}+div.article-body>p*4>lorem40 -->
+
+	<div class="container">
+		<article id="article1" class="article card soft">
+			<h2>Article 1</h2>
+			<div class="article-body">
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure totam soluta accusamus, cupiditate esse voluptatem quis facere. Ea iusto tempore voluptatum similique unde harum modi sed explicabo nulla hic veniam optio corporis quibusdam, deleniti quos quidem nemo illo delectus dolore?</p>
+				<p>Harum aliquam necessitatibus tempora nobis reprehenderit, deserunt minima eligendi incidunt nulla, asperiores, odio iste reiciendis ducimus molestias nam. Voluptatem cupiditate minima tempora et provident, tempore earum odio quibusdam quas accusamus, est, laudantium magni ex facere. Quidem consequuntur enim eos, in!</p>
+				<p>Eligendi error modi, tempore consequuntur pariatur accusamus vitae cupiditate fuga ex aperiam dicta magnam necessitatibus, quod facere odit, soluta. Totam ullam quas, blanditiis nesciunt officia! Assumenda, fugit maxime incidunt ea blanditiis adipisci illum eveniet soluta sed minima obcaecati, odio, nulla?</p>
+				<p>Animi expedita sapiente labore, cupiditate ullam, quos assumenda, dolorum rerum suscipit eveniet modi autem ipsam ea dignissimos tempore. Quod officia sint quibusdam corrupti, temporibus non nisi natus earum doloribus odio voluptatum, porro nostrum magni ipsa maiores officiis alias cupiditate libero.</p>
+			</div>
+		</article>
+
+		<div class="view-window" style="background-image:url(some kind of mountain)">
+			<h2>PRODUCT</h2>
+		</div>
+
+		<article id="article2" class="article card soft">
+			<h2>Article 2</h2>
+			<div class="article-body">
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis delectus odit corporis voluptates neque molestias amet cumque, dolorum quidem sint voluptate suscipit asperiores enim, nemo quod architecto quam adipisci, ab. Excepturi, adipisci laudantium, eligendi optio iusto incidunt quaerat atque tempore!</p>
+				<p>Porro fugit, accusantium labore et nulla eveniet eum autem quidem ratione nam quas quam pariatur maxime id fugiat cupiditate reiciendis aliquid excepturi minima cumque sit voluptatem perspiciatis quasi animi laboriosam! Minima, non accusantium aliquam, asperiores voluptas magnam dolore incidunt placeat!</p>
+				<p>Porro temporibus eligendi laudantium totam fugiat distinctio. Eum, obcaecati, tempora! Magni maxime nostrum fuga commodi ad expedita possimus dolorum ratione perferendis perspiciatis quod magnam iste deserunt iusto velit quas eligendi natus, id exercitationem optio, inventore laborum saepe officia ut quidem.</p>
+				<p>Voluptas deleniti eveniet, adipisci sunt hic deserunt accusantium, facere autem voluptate vero, id, fugiat illum expedita. Quae explicabo ad, velit ducimus tempora dolorem provident veritatis nam totam excepturi perspiciatis placeat eos incidunt illo ut, alias unde beatae, maxime veniam aliquid.</p>
+			</div>
+		</article>
+		<article id="article3" class="article card soft">
+			<h2>Article 3</h2>
+			<div class="article-body">
+				<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Vel, tempora? Corrupti asperiores nostrum atque aliquid alias. Perspiciatis veritatis repellendus maxime assumenda, labore, itaque doloribus, sed, ipsum earum at esse saepe amet neque similique aliquid cupiditate iusto quaerat fugit dignissimos cumque.</p>
+				<p>Rem sed quia tempore iste excepturi, accusantium facere culpa, id alias perspiciatis vel placeat a. Libero impedit nisi reiciendis quis ab quam porro accusamus, illo assumenda! Impedit officiis qui quaerat soluta consequatur saepe quod fuga officia, omnis iste praesentium velit.</p>
+				<p>Eaque temporibus enim necessitatibus aspernatur amet, at qui totam veniam ex minima mollitia dolor reprehenderit sit laudantium dignissimos quos? Repellat reiciendis est ea laudantium quisquam labore quas facilis quis qui laboriosam minima perferendis excepturi esse aut vero, ducimus voluptatum id?</p>
+				<p>Dolorem aliquam quidem maiores veniam corrupti ea, recusandae tempore praesentium cupiditate voluptate veritatis pariatur, deserunt dolores necessitatibus. Ad facilis accusamus magnam, provident deserunt nulla soluta, rem molestias, voluptatibus aperiam similique, ducimus? Obcaecati, autem, totam. Perspiciatis, ipsum cumque fugiat! Minus, suscipit?</p>
+			</div>
+		</article>
+		<article id="article4" class="article card soft">
+			<h2>Article 4</h2>
+			<div class="article-body">
+				<p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Quibusdam ullam nesciunt eveniet aliquid libero quasi aperiam necessitatibus. Optio blanditiis reprehenderit autem est iste ab dolorum hic iure! Cum provident unde tempora! At aspernatur quia exercitationem officiis debitis officia illum aperiam.</p>
+				<p>Officia maiores corporis eveniet eius autem quos. Id temporibus molestias tempora fugiat, amet alias eaque? Eaque ipsa provident voluptas exercitationem quae, adipisci impedit doloribus sunt debitis similique ad ex perferendis molestiae omnis beatae fugit error perspiciatis consequatur! Eaque, laudantium, mollitia.</p>
+				<p>Nisi sed, quis. Voluptatum ipsam, adipisci suscipit praesentium, accusantium nostrum numquam voluptatem id exercitationem, molestiae quia minima incidunt officiis minus doloribus. Quaerat labore, aspernatur? Nulla, alias explicabo reprehenderit porro, magnam odit, quisquam error tenetur excepturi, exercitationem eligendi laboriosam ex quibusdam!</p>
+				<p>Quibusdam eius, eos delectus earum. Veritatis, obcaecati recusandae dolor officiis accusamus iure blanditiis mollitia quae, tempore perspiciatis similique consequatur in cumque quidem dolores? Soluta, rem saepe ut accusamus sequi qui repellendus excepturi veritatis rerum quaerat consequuntur? Veritatis ab amet consequatur.</p>
+			</div>
+		</article>
+	</div>
+
+
+
+</body>
+</html>
