--- a/patshkowski.aj/index.html
+++ b/patshkowski.aj/index.html
@@ -54,7 +54,7 @@
 	</div>
 
 		<div class="view-window display-flex flex-align-center flex-justify-center" style="background-image:url(https://images.pexels.com/photos/174523/pexels-photo-174523.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)">
-			<h2 class="card soft dark">PRODUCT</h2>
+			<h2 class="card soft dark"><a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/product/index.html">PRODUCT</a></h2>
 		</div>
 
 	<div class="container">	
