--- a/patshkowski.aj/product/index.html
+++ b/patshkowski.aj/product/index.html
@@ -4,17 +4,99 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Product Site</title>
+	<title>Product Landing Page</title>
 
-	<link rel="stylesheet" href="lib/css/styleguide.css">
+	<link rel="stylesheet" href="../lib/css/styleguide.css">
 	<link rel="stylesheet" href="css/producttheme.css">
 
 </head>
 
+<header class="navbar">
+		<div class="container display-flex flex-align-center">
+			<div class="flex-none">
+				<a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/index.html"><img src="https://via.placeholder.com/100x50?text=Website+Logo"></a>
+			</div>
+</header>
+
 
 <body>
 
-	This is my product site
-	
+
+<div class="container main display-flex flex-align-center">
+	<div class="container">
+		<h1>This is the most interesting landing page you've ever seen! (Make-believe)</h1>
+
+		<h4 class="display-inline-flex">Supporting text about how awesome the product on this landing page is and how much it will solve all of your problems and make your life so much easier.</h4>
+
+		<div class="button dark round display-inline-flex">Call To Action</div>
+	</div>
+
+	<img class="display-flex" src="http://via.placeholder.com/300">
+
+</div>
+
+
+
+<div class="view-window display-flex flex-align-center flex-justify-center" style="background-image:url(../img/stlucia.jpg)">
+	<h2 class="card soft dark"><a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/product/index.html">PRODUCT</a></h2>
+</div>
+
+<img src="../img/stlucia.jpg">
+
+
+<div class="container">
+
+	<div class="card features">
+		<div class="title"><h2>Feature 1</h2></div>
+		<div class="image"><img src="https://via.placeholder.com/100"></div>
+		<div class="details">
+			<ul>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+			</ul>
+		</div>
+
+		<a href="#" class="button round">Learn More</a>
+	</div>
+
+	<div class="card features">
+		<div class="title"><h2>Feature 2</h2></div>
+		<div class="image"><img src="https://via.placeholder.com/100"></div>
+		<div class="details">
+			<ul>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+			</ul>
+		</div>
+
+		<a href="#" class="button round">Learn More</a>
+	</div>
+
+	<div class="card features">
+		<div class="title"><h2>Feature 3</h2></div>
+		<div class="image"><img src="https://via.placeholder.com/100"></div>
+		<div class="details">
+			<ul>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+			</ul>
+		</div>
+
+		<a href="#" class="button round">Learn More</a>
+	</div>
+
+</div>
+
+
+
+</div>
+
+
 </body>
 </html>
