added footer and anotherther section

--- a/patshkowski.aj/product/index.html
+++ b/patshkowski.aj/product/index.html
@@ -37,14 +37,17 @@
 
 
 
-<div class="view-window display-flex flex-align-center flex-justify-center" style="background-image:url(../img/stlucia.jpg)">
-	<h2 class="card soft dark"><a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/product/index.html">PRODUCT</a></h2>
+
+<div class="view-window display-flex flex-align-center flex-justify-center">
+        <video autoplay muted loop class="fillWidth">
+            <source src="imgs/lasunset.mp4" type="video/mp4"/>
+            Your browser does not support the video tag. I suggest you upgrade your browser.
+        </video>
 </div>
 
-<img src="../img/stlucia.jpg">
 
 
-<div class="container">
+<div class="container cards">
 
 	<div class="card features">
 		<div class="title"><h2>Feature 1</h2></div>
@@ -95,8 +98,24 @@
 
 
 
+
+<div class="container benefits flex-align-center">
+	
+		<img class="display-flex" src="https://via.placeholder.com/900X200">
+	
+	<div class="container">
+		<h3>Why you should use our product over the others</h3>
+
+		<h4 class="display-inline-flex">Supporting text about how awesome the product on this landing page is and how much it will solve all of your problems and make your life so much easier. You definitely want to click the button below!</h4>
+
+		<div class="button dark round display-inline-flex">Call To Action</div>
+	</div>
+
 </div>
 
+<footer>
+	<p>Created by AJ Patshkowski for WNM 613</p>
+</footer>
 
 </body>
 </html>
