added backup image for video

--- a/patshkowski.aj/product/index.html
+++ b/patshkowski.aj/product/index.html
@@ -41,7 +41,7 @@
 <div class="view-window display-flex flex-align-center flex-justify-center">
         <video autoplay muted loop class="fillWidth">
             <source src="imgs/lasunset.mp4" type="video/mp4"/>
-            Your browser does not support the video tag. I suggest you upgrade your browser.
+            <img src="imgs/stlucia.jpg" title="Your browser does not support the video tag. I suggest you upgrade your browser." />
         </video>
 </div>
 
