--- a/patshkowski.aj/demo/grid.html
+++ b/patshkowski.aj/demo/grid.html
@@ -5,18 +5,240 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Responsive Grid</title>
 
-	<base href="/aau/wnm608/patshkowski.aj">
+	<base href="/aau/wnm608/patshkowski.aj/">
 
 	<link rel="stylesheet" href="lib/css/styleguide.css">
+	<link rel="stylesheet" href="lib/css/gridsystem.css">
 	<link rel="stylesheet" href="css/storetheme.css">
 
 </head>
 <body>
 	<header class="navbar">
 		<div class="container display-flex flex-align-center"></div>
-		<div class="flex-non">
+		<div class="flex-none">
 			<h1>Grid System</h1>
 		</div>
-	
+	</header>
+
+	<div class="container">
+		<div class="card soft">
+			<h2>Grid</h2>
+
+		<div class="grid">
+			<div class="col-4"><div class="well">Column</div></div>
+			<div class="col-4"><div class="well">Column</div></div>
+			<div class="col-4"><div class="well">Column</div></div>
+		</div>
+		<hr>
+		<div class="grid">
+			<div class="col-2"><div class="well">Column</div></div>
+			<div class="col-8"><div class="well">Column</div></div>
+			<div class="col-2"><div class="well">Column</div></div>
+		</div>
+		<hr>
+		<div class="grid">
+			<div class="col-3"><div class="well">
+               <div class="display-flex">
+                  <div class="flex-none">hello</div>
+                  <div class="flex-stretch"></div>
+                  <div class="flex-none">there</div>
+               </div>
+            </div></div>
+			<div class="col-3"><div class="well">Column</div></div>
+			<div class="col-3"><div class="well">Column</div></div>
+			<div class="col-3"><div class="well">Column</div></div>
+			<div class="col-3"><div class="well">Column</div></div>
+			<div class="col-3"><div class="well">Column</div></div>
+			<div class="col-3"><div class="well">Column</div></div>
+			<div class="col-3"><div class="well">Column</div></div>
+			<div class="col-12"><div class="well">Column</div></div>
+		</div>
+		<hr>
+		<div class="grid">
+            <div class="col-6">
+               <div class="grid">
+                  <!-- .col-4*3>.well{Column} -->
+                  <div class="col-4">
+                     <div class="well">Column</div>
+                  </div>
+                  <div class="col-4">
+                     <div class="well">Column</div>
+                  </div>
+                  <div class="col-4">
+                     <div class="well">Column</div>
+                  </div>
+               </div>
+            </div>
+            <div class="col-6"><div class="well">Column</div></div>
+         </div>
+      </div>
+	</div>
+
+<div class="container">
+      <div class="card soft">
+         <h2>Grid Gap</h2>
+
+
+         <div class="grid gap">
+            <!-- .col-xs-12.col-md-4*12>.well{Column} -->
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="well">Column</div>
+            </div>
+         </div>
+      </div>
+   </div>
+
+
+	 <div class="container">
+      <div class="card soft">
+         <h2>Decimal Grid</h2>
+
+
+         <div class="grid decimal gap large">
+            <!-- .col-xs-2>.well{Column} -->
+            <div class="col-xs-2">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-2">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-2">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-2">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-2">
+               <div class="well">Column</div> 
+            </div>
+         </div>
+      </div>
+   </div>
+
+	<div class="container">
+		<div class="card soft">
+			<h2>Responsive Grid</h2>
+
+			<div class="grid">
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="well">Column</div>
+				</div>
+			</div>
+
+
+<hr>
+
+			<div class="grid">
+            <!-- .col-xs-12.col-sm-6.col-md-4.col-lg-3*12>.well{Column} -->
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+               <div class="well">Column</div>
+            </div>
+         </div>
+		</div>
+	</div>
+
+
+
+
+
 </body>
 </html>
