removed product folder and moved code to named folder

--- a/patshkowski.aj/index.html
+++ b/patshkowski.aj/index.html
@@ -11,6 +11,126 @@
 <body>
 	
 
+
+	<!-- START OF PRODUCT PAGE -->
+
+
+
+<header class="navbar">
+		<div class="container display-flex flex-align-center">
+			<div class="flex-none">
+				<a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/index.html"><img src="https://via.placeholder.com/100x50?text=Website+Logo"></a>
+			</div>
+</header>
+
+
+<body>
+
+
+<div class="container main display-flex flex-align-center">
+	<div class="container">
+		<h1>This is the most interesting landing page you've ever seen! (Make-believe)</h1>
+
+		<h4 class="display-inline-flex">Supporting text about how awesome the product on this landing page is and how much it will solve all of your problems and make your life so much easier.</h4>
+
+		<div class="button dark round display-inline-flex">Call To Action</div>
+	</div>
+
+	<img class="display-flex" src="http://via.placeholder.com/300">
+
+</div>
+
+
+
+
+<div class="view-window display-flex flex-align-center flex-justify-center">
+        <video autoplay muted loop class="fillWidth">
+            <source src="imgs/lasunset.mp4" type="video/mp4"/>
+            <img src="imgs/stlucia.jpg" title="Your browser does not support the video tag. I suggest you upgrade your browser." />
+        </video>
+</div>
+
+
+
+<div class="container cards">
+
+	<div class="card features">
+		<div class="title"><h2>Feature 1</h2></div>
+		<div class="image"><img src="https://via.placeholder.com/100"></div>
+		<div class="details">
+			<ul>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+			</ul>
+		</div>
+
+		<a href="#" class="button round">Learn More</a>
+	</div>
+
+	<div class="card features">
+		<div class="title"><h2>Feature 2</h2></div>
+		<div class="image"><img src="https://via.placeholder.com/100"></div>
+		<div class="details">
+			<ul>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+			</ul>
+		</div>
+
+		<a href="#" class="button round">Learn More</a>
+	</div>
+
+	<div class="card features">
+		<div class="title"><h2>Feature 3</h2></div>
+		<div class="image"><img src="https://via.placeholder.com/100"></div>
+		<div class="details">
+			<ul>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+			</ul>
+		</div>
+
+		<a href="#" class="button round">Learn More</a>
+	</div>
+
+</div>
+
+
+
+
+<div class="container benefits flex-align-center">
+	
+		<img class="display-flex" src="https://via.placeholder.com/900X200">
+	
+	<div class="container">
+		<h3>Why you should use our product over the others</h3>
+
+		<h4 class="display-inline-flex">Supporting text about how awesome the product on this landing page is and how much it will solve all of your problems and make your life so much easier. You definitely want to click the button below!</h4>
+
+		<div class="button dark round display-inline-flex">Call To Action</div>
+	</div>
+
+</div>
+
+<footer>
+	<p>Created by AJ Patshkowski for WNM 608</p>
+</footer>
+
+
+
+
+
+
+
+
+	<!-- END OF PRODUCT PAGE -->
+
 	<!-- To COMMENT : cmd + / -->
 
 	<!-- header>h1+p -->
