notes from class & added styleguide link to readme

--- a/patshkowski.aj/index.html
+++ b/patshkowski.aj/index.html
@@ -29,7 +29,7 @@
 
 
 <div class="grid">
-	<div class="col-8">
+	<div class="col-xs-12 col-md-6 col-lg-8">
 		<div class="container main display-flex flex-align-center">
 			<div class="container">
 				<h1>This is the most interesting landing page you've ever seen! (Make-believe)</h1>
@@ -43,8 +43,8 @@
 </div>
 
 
-	<div class="col-4">
-		<img class="display-flex" src="http://via.placeholder.com/300">
+	<div class="col-xs-12 col-md-6 col-lg-4">
+		<img class="display-flex flex-align-center" src="http://via.placeholder.com/300">
 	</div>
 </div>
 
@@ -58,24 +58,11 @@
 
 
 
-<div class="view-window display-flex flex-align-center flex-justify-center">
-        <video autoplay muted loop class="fillWidth">
-            <source src="imgs/lasunset.mp4" type="video/mp4"/>
-            <img src="imgs/stlucia.jpg" title="Your browser does not support the video tag. I suggest you upgrade your browser." />
-        </video>
-</div>
-
-
-
-
-
-
-
 
 
 
 <div class="grid">
-	<div class="col-4">
+	<div class="col-xs-12 col-md-4">
 		<div class="container cards">
 			<div class="card features">
 				<div class="title"><h2>Feature 1</h2></div>
@@ -94,7 +81,7 @@
 
 		</div>
 	</div>
-	<div class="col-4">
+	<div class="col-xs-12 col-md-4">
 
 		<div class="card features">
 		<div class="title"><h2>Feature 2</h2></div>
@@ -112,7 +99,7 @@
 	</div>
 
 	</div>
-	<div class="col-4">
+	<div class="col-xs-12 col-md-4">
 		
 		<div class="card features">
 		<div class="title"><h2>Feature 3</h2></div>
@@ -262,6 +249,14 @@
 		</article>
 
 	</div>
+
+
+<div class="view-window display-flex flex-align-center flex-justify-center">
+        <video autoplay muted loop class="fillWidth">
+            <source src="imgs/lasunset.mp4" type="video/mp4"/>
+            <img src="imgs/stlucia.jpg" title="Your browser does not support the video tag. I suggest you upgrade your browser." />
+        </video>
+</div>
 
 
 
