trying to add logo image

--- a/patshkowski.aj/index.html
+++ b/patshkowski.aj/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Your New Favorite Website</title>
+	<title>SoCal Roller Skate Co.</title>
 
 	<link rel="stylesheet" href="lib/css/styleguide.css">
 	<link rel="stylesheet" href="css/storetheme.css">
@@ -20,7 +20,7 @@
 <header class="navbar">
 		<div class="container display-flex flex-align-center">
 			<div class="flex-none">
-				<a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/index.html"><img src="https://via.placeholder.com/100x50?text=Website+Logo"></a>
+				<a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/index.html"><img src="../img/logo.png"></a>
 			</div>
 </header>
 
