--- a/patshkowski.aj/index.html
+++ b/patshkowski.aj/index.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" href="lib/css/styleguide.css">
 	<link rel="stylesheet" href="css/storetheme.css">
 	<link rel="stylesheet" href="lib/css/gridsystem.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
 	
@@ -18,10 +21,13 @@
 
 
 <header class="navbar">
-		<div class="container display-flex flex-align-center">
-			<div class="flex-none">
-				<a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/index.html"><img src="../img/logo.png"></a>
+	<div class="display-flex">
+		<div class="flex-none">
+			<div class="display-flex">
+			<div class="flex-stretch">
+				<a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/index.html"><img class="navlogo" src="img/Logo.png"></a>
 			</div>
+			<div class="display-flex">
 </header>
 
 
@@ -47,15 +53,6 @@
 		<img class="display-flex flex-align-center" src="http://via.placeholder.com/300">
 	</div>
 </div>
-
-
-<div class="view-window display-flex flex-align-center flex-justify-center" style="background-image:url(https://images.pexels.com/photos/174523/pexels-photo-174523.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)">
-			<h2 class="card soft dark"><a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/product/index.html">PRODUCT</a></h2>
-</div>
-
-
-
-
 
 
 
@@ -123,7 +120,9 @@
 
 
 
-
+<div class="view-window display-flex flex-align-center flex-justify-center" style="background-image:url(img/beachskate.jpg)">
+			<h2 class="card soft dark"><a href="http://ajpatshkowski.com/aau/wnm608/patshkowski.aj/product/index.html">PRODUCT</a></h2>
+</div>
 
 
 
